--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
 :root {
     --primary-color: rgb(62, 61, 116);
+    --secondary-color: rgb(91, 90, 136);
 }
 
 nav {
@@ -65,6 +66,11 @@ div#aboutus {
 
 div#courses .container {
     height: 90vh;
+}
+
+div#courses button {
+    background-color: var(--secondary-color);
+    color: #fff
 }
 
 div#footer {
