--- a/views/aboutus.html
+++ b/views/aboutus.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
+    <link rel="stylesheet"
+        href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
 
     <title>CA - Nosotros</title>
 </head>
@@ -27,74 +28,89 @@
                         <a class="nav-link" href="../index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Formacion</a>
+                        <a class="nav-link" href="#">Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#courses">Cursos</a>
+                        <a class="nav-link" href="courses.html">Cursos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contacto</a>
+                        <a class="nav-link" href="contactus.html">Contacto</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-    <!--Slider-->
+    <!--Introducción-->
     <div class="container mt-5">
         <h1>Nosotros</h1>
         <hr />
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam suscipit est sed eros aliquet
-                    tempor. Curabitur sit amet venenatis ipsum, ut condimentum lorem. Phasellus malesuada posuere augue,
-                    fringilla imperdiet ipsum pulvinar non. Phasellus cursus, massa ut tempus viverra, diam erat
-                    fringilla dolor, tristique bibendum nisl eros ut neque. Etiam laoreet id magna sit amet varius.
+            En un mundo cada vez más digital, la demanda de habilidades en programación se ha convertido en una
+            necesidad para muchas personas. Fue así como nació la idea de crear una plataforma en línea dedicada a
+            ofrecer cursos de programación de alta calidad y accesibles para todos. La página web fue diseñada para
+            brindar una experiencia de aprendizaje en línea sin complicaciones, con una amplia variedad de cursos que
+            cubren los lenguajes de programación más populares y en constante evolución. Desde cursos básicos de
+            introducción a la programación hasta cursos avanzados para desarrolladores experimentados, se ofrece una
+            amplia gama de opciones para satisfacer las necesidades de cualquier persona interesada en aprender a
+            programar.
         </p>
-        <div id="aboutus" class="row text-center">
-            <h2>¿Por qué elegirnos?</h2>
-            <div class="col-sm-6 col-md-3 my-2">
-                <span><i class="las la-fist-raised"></i></span>
-                <h3>Dedicación</h3>
-                <p>
-                    Damos siempre lo mejor de nosotros para que todo quede claro.
-                </p>
+        <!--Presentación de los profesores-->
+        <div id="teachers" class="row d-flex justify-content-center">
+            <div class="col-md-6 col-lg-4 mt-3">
+                <div class="card">
+                    <img src="../img/teacher_1.jpg" alt="profesor1" class="img-responsive">
+                    <div class="container text-center mt-2">
+                        <h2>Juan López</h2>
+                        <p>
+                            Ingeniero en sistemas con más de 10 años de experiencia en el desarrollo de aplicaciones web y
+                            móviles. Ha trabajado en empresas de tecnología líderes en la industria y se especializa en lenguajes de
+                            programación como JavaScript, React y Angular. Como instructor en tu página, Juan comparte
+                            experiencia y conocimientos prácticos para ayudar a los estudiantes a dominar el desarrollo de
+                            aplicaciones web.
+                        </p>
+                    </div>
+                    
+                </div>
             </div>
-            <div class="col-sm-6 col-md-3 my-2">
-                <span><i class="las la-calendar-day"></i></span>
-                <h3>Flexibilidad</h3>
-                <p>
-                    Ofrecemos cursos en distintos horarios para que puedas organizarte mejor.
-                </p>
+            <div class="col-md-6 col-lg-4 mt-3">
+                <div class="card">
+                    <img src="../img/teacher_2.jpg" alt="profesor1" class="img-responsive">
+                    <div class="container text-center mt-2">
+                        <h2>Ana Siciliani</h2>
+                        <p>
+                            Programadora autodidacta que comenzó a aprender a programar en línea. Después de desarrollar
+                            su carrera en la programación de videojuegos, ahora comparte su pasión por la programación con
+                            estudiantes de todo el mundo. Se especializa en la programación en C++, Python y Unity. Como instructora
+                            en tu página, Ana se enfoca en hacer que el aprendizaje sea divertido
+                            para sus alumnos.
+                        </p>
+                    </div>
+                </div>
             </div>
-            <div class="col-sm-6 col-md-3 my-2">
-                <span><i class="las la-tools"></i></span>
-                <h3>Soporte</h3>
-                <p>
-                    Contamos con un equipo de soporte que puede ayudarte ante cualquier inconveniente.
-                </p>
+            <div class="col-md-6 col-lg-4 mt-3">
+                <div class="card">
+                    <img src="../img/teacher_3.jpg" alt="profesor1" class="img-responsive">
+                    <div class="container text-center mt-2">
+                        <h2>Javier Donn</h2>
+                        <p>
+                            Desarrollador de software que ha trabajado en múltiples proyectos para empresas de
+                            tecnología de todo el mundo. Se especializa en la programación en Java, Kotlin y Spring. Como instructor
+                            en tu página, Javier comparte su conocimiento práctico en el desarrollo de aplicaciones empresariales
+                            para ayudar a los estudiantes a desarrollar habilidades valiosas y aplicables en el mundo real.
+                        </p>
+                    </div>
+                </div>
             </div>
-            <div class="col-sm-6 col-md-3 my-2">
-                <span><i class="las la-clock"></i></span>
-                <h3>Al día</h3>
-                <p>
-                    Enseñamos habilidades modernas y estamos constantemente actualizando los contenidos.
-                </p>
-            </div>
-
         </div>
+        
+        <!--Comentarios de los alumnos-->
         <div class="row mt-5">
             <div class="col-12 col-lg-6 text-center">
                 <h2>Estudiantes</h2>
                 <p class="p-3">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam suscipit est sed eros aliquet
-                    tempor. Curabitur sit amet venenatis ipsum, ut condimentum lorem. Phasellus malesuada posuere augue,
-                    fringilla imperdiet ipsum pulvinar non. Phasellus cursus, massa ut tempus viverra, diam erat
-                    fringilla dolor, tristique bibendum nisl eros ut neque. Etiam laoreet id magna sit amet varius. In
-                    lacinia sodales lorem, non rutrum orci auctor et. Ut interdum magna ut congue pretium. Etiam maximus
-                    consequat posuere. Pellentesque ut tempor nisl, ac condimentum est. Vestibulum sodales, magna dictum
-                    pharetra tempus, mi mauris malesuada felis, vel venenatis erat augue eu risus. Duis lacinia
-                    malesuada sapien eu ultricies. Proin sed bibendum dolor. Aliquam aliquam tristique odio in cursus.
-                    Cras in felis urna. Proin faucibus est ac aliquet sollicitudin. Phasellus sagittis, libero ac cursus
-                    sagittis, massa ligula facilisis neque, eu lacinia tellus nisi nec purus.
+                    Nuestros egresados adquieren habilidades no solo enfocadas a lo que hayan elegido estudiar, sino
+                    tambien con distintas aptitudes como el trabajo en equipo y la eficiencia en el uso de las
+                    herramientas que empleen. Algunos de ellos quieren compartir su experiencia
                 </p>
             </div>
             <div class="col-12 col-lg-6 m-auto">
@@ -103,22 +119,22 @@
                         <img src="../img/person_1.jpg" alt="Student1" class="img-fluid" style="width: 150px">
                         <p class="mx-3 m-3 my-sm-auto">
                             <i>"Tras haber completado el curso de C++, dejé de ser el empleado que pregunta todo a sus
-                            compañeros y, para mi sorpresa, empezó a ser al revés"</i>
+                                compañeros y, para mi sorpresa, empezó a ser al revés"</i>
                         </p>
                     </div>
                     <div class="review my-2 p-3 p-sm-0 d-sm-flex sm-rounded-pill text-center rounded">
                         <img src="../img/person_2.jpg" alt="Student2" class="img-fluid" style="width: 150px">
                         <p class="mx-3 m-3 my-sm-auto">
                             <i>"Si bien ya tenía un poco de base en Photoshop, el curso
-                            me ayudó a potenciar lo que ya sabía, además de permitirme
-                            entender nuevas herramientas"</i>
+                                me ayudó a potenciar lo que ya sabía, además de permitirme
+                                entender nuevas herramientas"</i>
                         </p>
                     </div>
                     <div class="review my-2 p-3 p-sm-0 d-sm-flex sm-rounded-pill text-center rounded">
                         <img src="../img/person_3.jpg" alt="Student3" class="img-fluid" style="width: 150px">
                         <p class="mx-3 m-3 my-sm-auto">
                             <i>"Tras haber completado el curso de C++, dejé de ser el empleado que pregunta todo a sus
-                            compañeros y, para mi sorpresa, empezó a ser al revés"</i>
+                                compañeros y, para mi sorpresa, empezó a ser al revés"</i>
                         </p>
                     </div>
                 </div>
@@ -156,8 +172,6 @@
             <p>CodeandoAprendo @ 2023 | Todos los derechos reservados</p>
         </div>
     </div>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
