--- a/style.css
+++ b/style.css
@@ -37,15 +37,16 @@ div#intro h1 {
 
 div#intro #btnDiv {
     position: absolute;
-    width: 100%;
+    width: 95%;
     bottom: 15%;
 }
 
-div#intro button {
+div#intro a {
     padding: 10px;
     font-size: 27px;
     color: var(--primary-color);
     opacity: 0.5;
+    background-color: #fff;
 }
 
 div#intro button:hover {
@@ -64,8 +65,18 @@ div#aboutus span{
     font-size: 48px;
 }
 
-div#courses .container {
-    height: 90vh;
+div#aboutus p{
+    font-size: 20px;
+}
+
+div#teachers .card{
+    border: 3px solid var(--primary-color);
+    background-color: var(--primary-color);
+    color: #fff;
+}
+
+div#courses {
+    min-height: 80vh;
 }
 
 div#courses button {
@@ -91,4 +102,34 @@ div#copyright {
 div#social a{
     border: 2px solid var(--primary-color);
     color:rgb(91, 90, 136)
+}
+
+div#contact .row {
+    height: 60vh;
+    display: flex;
+    align-items: center;
+}
+
+div#contact .banner {
+    height: 100%;
+    background-color: #45437e;
+    padding-top: 20vh;
+    padding-left: 5vw;
+    background-image: url('https://images.unsplash.com/photo-1576836165612-8bc9b07e7778?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80');
+    box-shadow: inset 0 0 0 1000px rgba(86, 86, 155, 0.2);
+}
+
+div#contact .banner h1 {
+    font-weight: 900;
+    font-size: 58px;
+}
+
+@media (max-width: 425px) {
+    .banner {
+        display: none;
+    }
+}
+
+div#contact label {
+    font-size: 18px;
 }
