--- a/views/courses.html
+++ b/views/courses.html
@@ -98,6 +98,8 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <!--smtpJS para enviar el email-->
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
     <script src="../script/fetchCourses.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
