--- a/views/contactus.html
+++ b/views/contactus.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
     <title>CA - Contacto</title>
 </head>
 
@@ -60,9 +60,9 @@
         </div>
     </div>
     <div class="iconos">
-        <a href="mailto:ejemplo@ejemplo.com" target="_blank"></a>
-        <a href="https://www.instagram.com/ejemplo" target="_blank"></a>
-        <a href="https://api.whatsapp.com/send?phone=+123456789" target="_blank"></a>
+        <a href="mailto:ejemplo@ejemplo.com" target="_blank"><i class="las la-envelope"></i></a>
+        <a href="https://www.instagram.com/ejemplo" target="_blank"><i class="lab la-instagram"></i></a>
+        <a href="https://api.whatsapp.com/send?phone=+123456789" target="_blank"><i class="lab la-whatsapp"></i></a>
     </div>
 
     <!--Footer-->
