--- a/views/aboutus.html
+++ b/views/aboutus.html
@@ -140,9 +140,9 @@
                 </div>
             </div>
             <div id="social" class="d-flex justify-content-center mt-5">
-                <a href="#" class="btn rounded-circle mx-2"><i class="lab la-facebook-f"></i></a>
-                <a href="#" class="btn rounded-pill mx-2"><i class="lab la-instagram"></i></a>
-                <a href="#" class="btn rounded-pill mx-2"><i class="lab la-youtube"></i></a>
+                <a href="https://www.facebook.com" class="btn rounded-circle mx-2"><i class="lab la-facebook-f"></i></a>
+                <a href="https://www.instagram.com" class="btn rounded-pill mx-2"><i class="lab la-instagram"></i></a>
+                <a href="https://www.youtube.com" class="btn rounded-pill mx-2"><i class="lab la-youtube"></i></a>
             </div>
         </div>
     </div>
@@ -160,9 +160,9 @@
             </div>
             <div class="col">
                 <div class="input-group">
-                    <input type="text" class="form-control form-control-sm" placeholder="example@gmail.com">
+                    <input id="subscribeEmail" type="text" class="form-control form-control-sm" placeholder="example@gmail.com">
                     <div class="input-group-append">
-                        <button class="btn btn-outline-light" type="button">Suscribite</button>
+                        <button id="subscribeBtn" class="btn btn-outline-light" type="button">Suscribite</button>
                     </div>
                 </div>
             </div>
@@ -172,6 +172,10 @@
             <p>CodeandoAprendo @ 2023 | Todos los derechos reservados</p>
         </div>
     </div>
+
+    <!--Bootstrap script-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <!--Notificación de suscripción-->
+    <script src="script/subscribeAlert.js"></script>
 </body>
 </html>
