--- a/views/contactus.html
+++ b/views/contactus.html
@@ -77,9 +77,9 @@
             </div>
             <div class="col">
                 <div class="input-group">
-                    <input type="text" class="form-control form-control-sm" placeholder="example@gmail.com">
+                    <input id="subscribeEmail" type="text" class="form-control form-control-sm" placeholder="example@gmail.com">
                     <div class="input-group-append">
-                      <button class="btn btn-outline-light" type="button">Suscribite</button>
+                        <button id="subscribeBtn" class="btn btn-outline-light" type="button">Suscribite</button>
                     </div>
                 </div>
             </div>
@@ -98,6 +98,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <!--sendContactEmail.js-->
     <script src="../script/sendContactEmail.js"></script>
+    <!--Notificación de suscripción-->
+    <script src="script/subscribeAlert.js"></script>
 </body>
 
 </html>
