--- a/views/courses.html
+++ b/views/courses.html
@@ -83,9 +83,9 @@
             </div>
             <div class="col">
                 <div class="input-group">
-                    <input type="text" class="form-control form-control-sm" placeholder="example@gmail.com">
+                    <input id="subscribeEmail" type="text" class="form-control form-control-sm" placeholder="example@gmail.com">
                     <div class="input-group-append">
-                      <button class="btn btn-outline-light" type="button">Suscribite</button>
+                        <button id="subscribeBtn" class="btn btn-outline-light" type="button">Suscribite</button>
                     </div>
                 </div>
             </div>
@@ -96,11 +96,16 @@
         </div>
     </div>
 
+    <!--Bootstrap script-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <!--smtpJS para enviar el email-->
     <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <!--Cursos-->
     <script src="../script/fetchCourses.js"></script>
+    <!--SweetAlert-->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!--Notificación de suscripción-->
+    <script src="script/subscribeAlert.js"></script>
 </body>
 
 </html>
